# PJZzWS9d13dvBe

./: .gitignore  README.md
include/application/: 1_2d_geometry_shapes.h  2_3d_geometry_shapes.h
include/upgine/application/: application_abstract.h  application_base.h  application_interface.h
include/upgine/auto_generate/: chunk_service.h  system_service.h
include/upgine/core/managers/: gpu_manager.h  services_manager.h
include/upgine/core/math/: math_operations.h
include/upgine/core/observer/: observer.h
include/upgine/core/services/: camera_service.h  draw_service.h  graphics_resources_service.h  input_service.h  platform_service.h  profiler_service.h  service_interface.h  time_service.h  window_service.h
include/upgine/core/services/dto/: draw_service_dto.h
include/upgine/core/types/: basic_types.h  math_types.h
include/upgine/ecs/archetypes/: archetypes_declaration.h
include/upgine/ecs/components/: component_interface.h  renderer_component.h  transform_component.h
include/upgine/ecs/dto/: component_dto.h
include/upgine/ecs/entity/: entity.h
include/upgine/ecs/memory/: memory_chunk.h  memory_chunks.h
include/upgine/ecs/systems/: renderer_system.h  system_interface.h  transform_system.h
include/upgine/graphics/draw/: draw_clear.h  draw_command_interface.h  draw_element.h  draw_list.h  draw_material.h  draw_uniform_base.h  draw_uniform_float.h  draw_uniform_matrix4.h  draw_uniform_texture.h
include/upgine/graphics/gpu/: gpu_interface.h  opengl_api.h
include/upgine/graphics/resources/: buffer.h  constants.h  material.h  resources_interface.h  shader.h  texture.h  vertex_buffer.h
include/upgine/macros/: archetype_generator.h  dependency_injector.h  memory_alignment.h
include/upgine/memory/smart_pointer/: reference.h  reference_container.h  vector.h
include/upgine/objects/: camera_object.h  game_object.h
install/: generate_project-clang-x64.bat  generate_project-clang.bat  generate_project-vs.bat
install/cmake_builder/: CMakeLists.txt  EngineLibraries.cmake  Upgine.cmake
scripts/: chunk_service_generator.py  doc_template.py  system_service_generator.py  tools.py
src/application/: 1_2d_geometry_shapes.cpp
src/upgine/application/: application_base.cpp
src/upgine/auto_generate/: chunk_service.cpp  system_service.cpp
src/upgine/core/managers/: gpu_manager.cpp  services_manager.cpp
src/upgine/core/services/: camera_service.cpp  draw_service.cpp  graphics_resources_service.cpp  input_service.cpp  platform_service.cpp  profiler_service.cpp  time_service.cpp  window_service.cpp
src/upgine/ecs/system/: renderer_system.cpp  transform_system.cpp
src/upgine/graphics/draw/: draw_clear.cpp  draw_element.cpp  draw_list.cpp  draw_material.cpp  draw_uniform_base.cpp  draw_uniform_float.cpp  draw_uniform_matrix4.cpp  draw_uniform_texture.cpp
src/upgine/graphics/gpu/: opengl_gpu.cpp
src/upgine/graphics/resources/: buffer.cpp  material.cpp  shader.cpp  texture.cpp  vertex_buffer.cpp
